# ThrustStand

./: README.md
VADL Thruster Test Bed/: VADL Thruster Test Bed.json  VADL Thruster Test Bed_metadata.json  doxygen_config
VADL Thruster Test Bed/src/bbbgpio/: CMakeLists.txt  package.xml
VADL Thruster Test Bed/src/control/: CMakeLists.txt  package.xml
VADL Thruster Test Bed/src/hardware_interfaces/: CMakeLists.txt  package.xml
VADL Thruster Test Bed/src/node/: CMakeLists.txt  package.xml
daq/: daq.cpp
daq/CalibrationTests/: 1100.txt  12000.txt  2150.txt  2350.txt  3050.txt  4150.txt  5200.txt  7100.txt  8600.txt  Calibrated_Data.xlsx  steadystate.txt
daq/Tests/CalibrationTests/: 100.txt  10200.txt  120.txt  135.txt  150.txt  175.txt  1800.txt  195.txt  20.txt  225.txt  260.txt  30.txt  310.txt  345.txt  380.txt  40.txt  415.txt  460.txt  515.txt  65.txt  75.txt  90.txt  Calibrated_Data.xlsx  Calibration.xlsx  README.txt  post-steadstate.txt  post-test-steadystate.txt  steadystate.txt
daq/Tests/CalibrationTests-Old/: 10200.txt  1100.txt  12000.txt  1400.txt  15000.txt  1800.txt  2150.txt  2350.txt  2600.txt  3050.txt  4150.txt  5200.txt  7100.txt  8600.txt  README.txt  post-test-steadystate.txt  steadystate.txt
daq/Tests/ColdGasCalibration/: 10.txt  1025.txt  105.txt  205.txt  300.txt  410.txt  505.txt  55.txt  615.txt  700.txt  795.txt  900.txt  Calibration.xlsx  post_steadystate.txt  steadystate.txt
daq/Tests/GainNoiseTest/: Gain110.txt  Gain1100.txt  Gain550.txt  README.txt  data.xlsx
daq/Tests/ManualSolenoidTest/: README.txt  manual_solenoid_test.xlsx
daq/Tests/SolenoidLeakyTest/: LeakyTest.xlsx  README.txt
daq/Tests/SolenoidNoiseTest/: Noise_Comparison.xlsx  README.txt
daq/Tests/ThrusterTests/8-2_N2_740PSI/: 740psi_data.xlsx  README.txt  README.txt~
daq/Tests/ThrusterTests/8-3_N2_400psi/: 8-3_N2.xlsx  README.txt  README.txt~
daq/Tests/ThrusterTests/8-3_N2_600psi/: data.xlsx
daq/Tests/ThrusterTests/8-3_N2_Run1/: 8-3_N2.xlsx  8-3_N2_Run1.xlsx
daq/Tests/ThrusterTests/8-3_N2_Vibration_Test/: README.txt  data.xlsx  vib_data.xlsx
daq/Tests/ThrusterTests/Old_Tests/: README.txt
daq/ThrusterTests/: #Wall_Air_1.txt#
daq/include/: gpio.h
daq/src/: daq.cpp  gpio.cpp  solenoid_control.cpp  solenoid_control.cpp~
(+16 files in other folders)
